# shinzo-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  debug_import.py  debug_run.py  package.json  pyproject.toml  repro.py  verify_fix.py
.changeset/: README.md  little-peaches-pay.md  smart-sites-spend.md
.github/scripts/: update-python-version.sh  validate-no-version-change.sh
.github/workflows/: RELEASING.md  ci.yml  on-pr-feature-branch.yml  on-push-main.yml
examples/: basic_usage.py  basic_usage_no_telemetry.py  resource_usage.py  test_protobuf.py  with_authentication.py
src/shinzo/: __init__.py  config.py  instrumentation.py  json_exporter.py  sanitizer.py  session.py  telemetry.py  types.py  utils.py
tests/: PROMPTS_TELEMETRY_PLAN.md  RESOURCE_INSTRUMENTATION.md  RESOURCE_MIGRATION_GUIDE.md  __init__.py  live_test.py  quick_test.py  test_config.py  test_prompts_instrumentation.py  test_resource_instrumentation.py  test_resources_client.py  test_resources_demo.py  test_sanitizer.py  verify_instrumentation.py
